// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query a mixin method accepts a thunk to avoid circular refs 1`] = `
"type Hello {
  world(name: String!): String
  mixinMethod(a: String!): String
}

type Query {
  hello: Hello
}
"
`;

exports[`Query a mixin method executes and field method has correct context 1`] = `
"type Hello {
  world(name: String!): String
  mixinMethod(a: String!): String
}

type ImplementorType implements InterfaceSampleType {
  interfaceMethod(name: String!): String
  world(name: String!): String
  mixinMethod(a: String!): String
}

interface InterfaceSampleType {
  interfaceMethod(name: String!): String
  mixinMethod(a: String!): String
}

type Query {
  hello: Hello
  interfaceReturning: InterfaceSampleType
}
"
`;

exports[`Query a mixin method executes and field method has correct context 2`] = `
Object {
  "data": Object {
    "hello": Object {
      "mixinMethod": "hello from mixin Bob1",
    },
    "interfaceReturning": Object {
      "mixinMethod": "hello from mixin Bob2",
    },
  },
}
`;
